--- a/Docker.Dotnet.UI/Docker.Dotnet.UI.csproj
+++ b/Docker.Dotnet.UI/Docker.Dotnet.UI.csproj
@@ -1,12 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>7ae0a38b-f140-433e-8852-e2970ecabebb</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="Docker.DotNet" Version="3.125.15" />
@@ -15,5 +14,9 @@
     <PackageReference Include="AutoRegisterInject" Version="1.4.1" />
     <PackageReference Include="Riok.Mapperly" Version="4.3.0-next.5" />
   </ItemGroup>
-
+  <ItemGroup>
+    <Content Include="..\.dockerignore">
+      <Link>.dockerignore</Link>
+    </Content>
+  </ItemGroup>
 </Project>
