--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,9 @@ services:
     volumes:
       # 挂载 Docker socket 以便容器内可以控制宿主机 Docker
       - /var/run/docker.sock:/var/run/docker.sock
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Production
-      - ASPNETCORE_URLS=http://+:8080
+    # environment:
+    #   - ASPNETCORE_ENVIRONMENT=Production
+    #   - ASPNETCORE_URLS=http://+:8080
     restart: unless-stopped
     # 如果在 Windows 上运行，可能需要不同的 socket 路径
     # 对于 Windows + WSL2，上面的配置应该可以正常工作
