--- a/Docker.Dotnet.UI/Docker.Dotnet.UI.csproj
+++ b/Docker.Dotnet.UI/Docker.Dotnet.UI.csproj
@@ -4,7 +4,12 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>7ae0a38b-f140-433e-8852-e2970ecabebb</UserSecretsId>
+    <Version>0.0.1</Version>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <Authors>fengb3</Authors>
+    <!-- <ContainerBaseImage>mcr.microsoft.com/dotnet/aspnet:9.0-noble-chiseled</ContainerBaseImage>
+    <ContainerRepository>docker-dotnet-ui</ContainerRepository>
+    <ContainerImageTags>$(Version);latest</ContainerImageTags> -->
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
