Fix variable reference for Docker tags

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -146,7 +146,7 @@ jobs:
         name: Build & push Docker image
         with:
           image: ${{ env.IMAGE_NAME }}
-          tags: ${VERSION}, latest
+          tags: ${{ VERSION }}, latest
           registry: ${{ vars.DOCKERHUB_REGISTRY }}
           dockerfile: ./Docker.Dotnet.UI/Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
