--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -146,12 +146,12 @@ jobs:
         name: Build & push Docker image
         with:
           image: ${{ env.IMAGE_NAME }}
-          tags: $VERSION, latest
+          tags: ${{ needs.check-version-changed.outputs.version }}, latest
           registry: ${{ vars.DOCKERHUB_REGISTRY }}
           dockerfile: ./Docker.Dotnet.UI/Dockerfile
-          username: ${{ secrets.DOCKER_USERNAME }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
+          
       # - name: 构建并推送 Docker 镜像
       #   uses: docker/build-push-action@v5
       #   with:
