Implement user authentication with ASP.NET Core Identity, including login, logout, and access control. Add user roles and default admin account setup. Update Docker configuration and remove obsolete build scripts.

--- a/Docker.Dotnet.UI/Dockerfile
+++ b/Docker.Dotnet.UI/Dockerfile
@@ -1,4 +1,4 @@
-﻿FROM mcr.microsoft.com/dotnet/aspnet:9.0-noble-chiseled AS base
+﻿FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
 # 需要 root 权限来访问 Docker socket
 # USER $APP_UID
 WORKDIR /app
