Update Dockerfile and docker-compose.yml: fix project file copy path and adjust volume mappings

--- a/Docker.Dotnet.UI/Dockerfile
+++ b/Docker.Dotnet.UI/Dockerfile
@@ -9,6 +9,7 @@ FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["Docker.Dotnet.UI/Docker.Dotnet.UI.csproj", "Docker.Dotnet.UI/"]
+COPY ["Docker.Dotnet.UI.SourceGenerator/Docker.Dotnet.UI.SourceGenerator.csproj", "Docker.Dotnet.UI.SourceGenerator/"]
 RUN dotnet restore "Docker.Dotnet.UI/Docker.Dotnet.UI.csproj"
 COPY . .
 WORKDIR "/src/Docker.Dotnet.UI"
