--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -155,17 +155,49 @@ jobs:
           platforms: linux/amd64,linux/arm64
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          
-      # - name: 构建并推送 Docker 镜像
-      #   uses: docker/build-push-action@v5
-      #   with:
-      #     context: .
-      #     file: ./Docker.Dotnet.UI/Dockerfile
-      #     push: true
-      #     tags: ${{ steps.meta.outputs.tags }}
-      #     platforms: linux/amd64,linux/arm64
-      #     cache-from: type=gha
-      #     cache-to: type=gha,mode=max
+
+  create-release:
+    needs: [check-version-changed, build-and-push]
+    if: needs.check-version-changed.outputs.version_changed == 'true'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: 检出代码
+        uses: actions/checkout@v4
+
+      - name: 设置 Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and export amd64 image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Docker.Dotnet.UI/Dockerfile
+          platforms: linux/amd64
+          outputs: type=docker,dest=image-amd64.tar
+          tags: ${{ env.IMAGE_NAME }}:${{ needs.check-version-changed.outputs.version }}-amd64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Build and export arm64 image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Docker.Dotnet.UI/Dockerfile
+          platforms: linux/arm64
+          outputs: type=docker,dest=image-arm64.tar
+          tags: ${{ env.IMAGE_NAME }}:${{ needs.check-version-changed.outputs.version }}-arm64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Create Release and Upload Assets
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: v${{ needs.check-version-changed.outputs.version }}
+          files: |
+            image-amd64.tar
+            image-arm64.tar
 
       - name: 构建总结
         run: |
