Refactor Razor pages to use ViewModel inheritance
All UI Razor pages now inherit from MyComponentBase<TViewModel> for consistent lifecycle and localization. Moved business logic and dialog state management from Razor code-behind to ViewModels, improving MVVM separation and testability. Added ErrorViewModel, HomeViewModel, and LogoutViewModel to support page logic. Updated documentation and project references to reflect file moves and new requirements. Removed DOCKER_DEPLOY.md and updated links in README.

--- a/Docker.Dotnet.UI/Docker.Dotnet.UI.csproj
+++ b/Docker.Dotnet.UI/Docker.Dotnet.UI.csproj
@@ -34,8 +34,7 @@
         </Content>
     </ItemGroup>
     <ItemGroup>
-        <AdditionalFiles Include="*.table.csv"/>
-        <AdditionalFiles Include="ImmutableTables\Localization.table.csv" />
-        <None Remove="*.table.csv"/>
+        <AdditionalFiles Include="ImmutableTables\*.table.csv"/>
+        <None Remove="ImmutableTables\*.table.csv"/>
     </ItemGroup>
 </Project>
