--- a/Docker.Dotnet.UI.SourceGenerator/Docker.Dotnet.UI.SourceGenerator.csproj
+++ b/Docker.Dotnet.UI.SourceGenerator/Docker.Dotnet.UI.SourceGenerator.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
@@ -14,15 +14,19 @@
       Include="Fengb3.EasyCodeBuilder"
       GeneratePathProperty="true"
       PrivateAssets="all"
-      Version="0.0.4"
+      Version="0.0.6"
     />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" GeneratePathProperty="true" PrivateAssets="all" Version="8.0.0" />
+    <PackageReference
+      Include="Microsoft.Extensions.Configuration.Abstractions"
+      GeneratePathProperty="true"
+      PrivateAssets="all"
+      Version="8.0.0"
+    />
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.14.0" />
   </ItemGroup>
   <PropertyGroup>
     <GetTargetPathDependsOn>$(GetTargetPathDependsOn);GetDependencyTargetPaths</GetTargetPathDependsOn>
@@ -30,7 +34,7 @@
   <Target Name="GetDependencyTargetPaths">
     <ItemGroup>
       <TargetPathWithTargetPlatformMoniker
-        Include="$(PKGFengb3_EasyCodeBuilder)\lib\netstandard2.1\*.dll"
+        Include="$(PKGFengb3_EasyCodeBuilder)\lib\netstandard2.0\*.dll"
         IncludeRuntimeDependency="false"
       />
     </ItemGroup>
