--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -56,6 +56,9 @@ jobs:
     needs: check-version-changed
     if: needs.check-version-changed.outputs.version_changed == 'true'
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
       - name: 检出代码
         uses: actions/checkout@v4
